Move editor headers into correct VS project
git-svn-id: http://svn.eduke32.com/eduke32@7118 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/platform/Windows/mapster32.vcxproj
+++ b/platform/Windows/mapster32.vcxproj
@@ -214,7 +214,11 @@
     <ClCompile Include="..\..\source\duke3d\src\sounds_mapster32.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\source\build\include\m32script.h" />
     <ClInclude Include="..\..\source\build\include\startwin.editor.h" />
+    <ClInclude Include="..\..\source\duke3d\src\m32def.h" />
+    <ClInclude Include="..\..\source\duke3d\src\mapster32.h" />
+    <ClInclude Include="..\..\source\duke3d\src\sounds_mapster32.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="audiolib.vcxproj">
