Move the LZW compression functions out of cache1d.cpp into their own object, klzw.cpp.
This eliminates the hackiness of libcache1d.so (now libkzlw.so) and CACHE1D_COMPRESS_ONLY.

git-svn-id: http://svn.eduke32.com/eduke32@7140 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/platform/Windows/build.vcxproj
+++ b/platform/Windows/build.vcxproj
@@ -225,6 +225,7 @@
     <ClCompile Include="..\..\source\build\src\hash.cpp" />
     <ClCompile Include="..\..\source\build\src\hightile.cpp" />
     <ClCompile Include="..\..\source\build\src\jwzgles.c" />
+    <ClCompile Include="..\..\source\build\src\klzw.cpp" />
     <ClCompile Include="..\..\source\build\src\kplib.cpp" />
     <ClCompile Include="..\..\source\build\src\lunatic.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -334,6 +335,7 @@
     <ClInclude Include="..\..\source\build\include\hightile.h" />
     <ClInclude Include="..\..\source\build\include\jwzgles.h" />
     <ClInclude Include="..\..\source\build\include\jwzglesI.h" />
+    <ClInclude Include="..\..\source\build\include\klzw.h" />
     <ClInclude Include="..\..\source\build\include\kplib.h" />
     <ClInclude Include="..\..\source\build\include\libdivide.h" />
     <ClInclude Include="..\..\source\build\include\lz4.h" />
